--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,72 @@ body{
     border: 2px solid #1ebba3;
     cursor: pointer;
 }
+/*----------Animation Start------------*/
 
+div.box{
+    padding: 0;
+}
+
+.box{
+    position: relative;
+    perspective: 1000px;
+    transition: all 0.3s ease-in-out 0.3s;
+}
+
+.box:hover{
+    transform: scale(1.1);
+    box-shadow: 1px 2px 10px 5px solid #000;
+}
+
+.box .box-img{
+    transform: rotateY(0);
+    transition: all 0.5s ease-in-out 0s;
+}
+
+.box:hover .box-img{
+    transform: rotateY(-90deg);
+}
+
+
+.box .box-img img{
+    width: 250px;
+    height: 380px;
+    border: 2px solid #000;
+    border-radius: 10px;
+}
+
+.box .box-content{
+    color: white;
+    background: rgba(0, 0, 0, 0.8);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    padding: 90px 20px;
+    box-sizing: border-box;
+    text-align: center;
+    border-radius: 10px;
+    transform: rotateY(90deg);
+    transition: all 0.5s ease-in-out 0s;
+}
+
+.box:hover .box-content{
+    transform: rotateY(0);
+}
+
+.box .box-content p{
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    padding: 20px 0;
+    margin: 0 25px;
+}
+
+.row{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
 
 /*----------Newsletter Start------------*/
 
@@ -160,6 +225,10 @@ body{
         font-size: 2em;
     }
 
+    .box{
+        margin-top: 1.6em !important;
+    }
+    
 
 }
 
@@ -188,6 +257,11 @@ body{
         width: 100%;
         max-width: 100%;
     }
+
+    .box{
+        margin-top: 1.6em !important;
+    }
+    
 }
 
 
