Edited texts, photos

--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ body{
 .cover {
     width: 100%;
     height: 55vmin;
-    background: url("/happy.jpeg");
+    background: url("/happiness.JPG");
     background-position: -24rem -19rem;
     background-size: 150%;
     position: relative;
