--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,65 @@ div.box{
 }
 
 
+#btn {
+    background: #222;
+    height: 1.3em;
+    min-width: 5.5em;
+    border: none;
+    border-radius: 10px;
+    color: #1ebba3;
+    font-size: 40px;
+    font-family: 'Montserrat', sans-serif;
+    position: relative;
+    transition: 1s;
+    -webkit-tap-highlight-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    padding-top: 5px;
+    margin-top: 10px;
+    margin-left: 10px;
+  }
+
+  #btn:hover {
+    background: transparent;
+  }
+  
+ /* #btn #circle {
+    width: 5px;
+    height: 5px;
+    background: transparent;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    overflow: hidden;
+    transition: 500ms;
+  }
+  
+  .noselect {
+    -webkit-touch-callout: none;
+      -webkit-user-select: none;
+       -khtml-user-select: none;
+         -moz-user-select: none;
+          -ms-user-select: none;
+              user-select: none;
+  }
+  
+  
+
+  
+  #btn:hover #circle {
+    height: 50px;
+    width: 150px;
+    left: 0;
+    border-radius: 0;
+    border-bottom: 2px solid #eee;
+  }
+  */
+
+
 /*----------=--- Media Query---------------*/
 @media screen and (max-width: 767px){
 /*---------------tablets---------------------*/
